--- a/Dissertation/acronyms.tex
+++ b/Dissertation/acronyms.tex
@@ -2,10 +2,24 @@
 \addcontentsline{toc}{chapter}{Список сокращений и условных обозначений}  % Добавляем его в оглавление
 % при наличии уравнений в левой колонке значение параметра leftmargin приходится подбирать вручную
 \begin{description}[align=right,leftmargin=3.5cm]
+\item[АИС] автоматизированная измерительная система
 \item[АТС] автономное (беспилотное) транспортное средство
+\item[ИК] инфракрасный (диапазон)
 \item[ЛВС] локальная вычислительная сеть
+\item[ПЛК] программируемый логический контроллер
 \item[ПО] программное обеспечение
+\item[СПФ] сухой пленочный фоторезист
 \item[СТЗ] система технического зрения
+\item[ЧПУ] числовое программное управление
+\item[УП] управляющая программа
+\item[BSD] Berkeley Software Distribution
+\item[GPL] General Public License
+\item[GPU] Graphics Processing Unit, блок вычисления графики
+\item[JSON] JavaScript Object Notation
+\item[OEE] Overall Equipment Efficiency, показатель общей эффективности оборудования.
+\item[QR] Quick Response (code)
 \item[RDP] Remote Desktop Protocol, протокол для удалённого доступа к компьютеру посредством ЛВС от Microsoft
+\item[SDK] Software Developer's Kit, набор для разработки ПО.
+\item[SIFT] Scale-Invariant Feature Transform
 \item[VNC] Virtual Network Computing, протокол для удалённого доступа к компьютеру посредством ЛВС от Oracle
 \end{description}
