--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -1,6 +1,14 @@
 \chapter*{Словарь терминов}             % Заголовок
 \addcontentsline{toc}{chapter}{Словарь терминов}  % Добавляем его в оглавление
 
-\textbf{TeX} : Cистема компьютерной вёрстки, разработанная американским профессором информатики Дональдом Кнутом
+\textbf{Автономное транспортное средство} : вид транспортных средств, перемещающихся без участия человека, используя геолокацию или систему технического зрения
 
-\textbf{панграмма} : Короткий текст, использующий все или почти все буквы алфавита
+\textbf{Захват изображения} : процесс фиксации входного видеопотока при помощи датчика изображения с последующим преобразованием в цифровой формат
+
+\textbf{Объект} : предмет или часть предмета из реального мира или какой-то его параметр
+
+\textbf{Пиксель} : минимальная составляющая цифрового изображения
+
+\textbf{Программируемый логический контроллер} : разновидность электронной вычислительной машины для выполнения специализированных задач, чаще всего, в области автоматизации технологических процессов
+
+\textbf{Стартап} : разновидность формы организации компании, целью которой является поиск воспроизводимой бизнес-идеи или обкатка какой-либо инновации на рынке
