--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -32,10 +32,44 @@
 Список литературы содержит
 \formbytotal{citenum}{наименован}{ие}{ия}{ий}.
 
-\textbf{Первая глава} посвящена вопросам анализа текущего состояния исследований, модульному оборудованию и месту систем машинного зрения в промышленном производстве. Приводится описание разрабатываемой модульной трехкоординатной платформы, включая структурную схему взаимодействия модулей и каналов передачи данных.
+\textbf{Первая глава} содержит общее положение систем технического зрения в деятельности человека, в том числе, и в промышленности, степень разработанности темы и общее описание трёхкоординатной платформы с ЧПУ, которая будет выступать в роли полигона для отработки методик, определяемых в данной диссертации.
 
-\textbf{Вторая глава} содержит понятие о производительности оборудования, методах его расчёта и о влияющих на него факторах, а также описывает пути его повышение с внедрением систем технического зрения на отдельные участки производственных линий.
+Системы технического зрения (СТЗ) --- комплекс аппаратных и программных средств, разработанных для получения некоторых данных из окружающего мира посредством анализа визуальной информации. Техническое зрение зародилось ещё в середине XX века с описанием перцептрона, реализующего модель восприятия информации мозгом. За последующие десятилетия отрасль развивалась, но основной скачок пришёлся на 90-е годы, когда появились быстрые интерфейсы передачи данных (USB), а аппаратные компоненты стали относительно дешёвыми и распространёнными. К XXI веку отрасль стала достаточно распространённой во многих сферах промышленности, в том числе благодаря развитию программных пакетов для проектирования СТЗ и, следовательно, снижению её себестоимости. На данный момент отрасль является востребованной, с оборотом 1.13 миллиарда долларов за 2019 год, при этом, большая часть сфер применения СТЗ приходится на промышленное производство.
+
+СТЗ нашли своё применение в разных задачах, среди которых можно выделить иденЖданов А.А.тификацию, распознавание объектов, отслеживание объекта, измерения, навигация роботов, измерения и сравнения и другие. Так, без штрихкода уже нельзя себе представить товарооборот. Стандартизация СТЗ регламентируется рядом стандартов, разработанных ассоциациями Северной Америки (AIA), Европы (EMVA) и Японии (JIIA). Основной определяющий стандарт --- EMVA 1288 --- регламентирует множество нюансом проектирования и тестирования СТЗ, от методик измерений до используемых протоколов передачи данных. Не стоят на месте и стандарты передачи потокового видео, которое уже добилось высокой степени сжатия без потерь качества, что благотворно сказывается на быстродействии и точности работы СТЗ.
+
+Поскольку промышленность --- одна из отраслей, вынужденных находиться на острие прогресса, то, разумеется, тема применимости СТЗ в промышленности развивается уже достаточно давно. Степень автоматизированности труда является одним из признаков развитой экономики государства. В промышленности СТЗ широко применяются, в частности, в задачах дефектоскопии, в задачах сборки, в контролирующих операциях, в отслеживании заготовок на протяжении всего цикла производства, в вопросах безопасности и многом другом. Чаще всего СТЗ действует обособленно от производственной линии, выступая надстройкой над ней, и лишь в очень редких случаях СТЗ встраивается в используемое оборудование и выполняет задачи, получая данные по ЛВС. Существуют решения, повышающие универсальность СТЗ, в частности, полноценные комплекты СТЗ с корпусом и выносными камерами (например, от Delta Electronics, Axiomtek или AAEON), у которых есть возможность составления своей программы обработки по нужды производства, но такие системы имеют свои ограничения и являются проприетарными.
+
+Очевидно, что уровень исследовательской работы в данной сфере является высоким. Начиная с 80-х годов прошлого века в СССР группой учёных, куда входили Титов В. С., Жаботинский Ю.Д., Жданов А.А. и другие, была определена концепция производственной СТЗ, состоящей из ряда компонентов, обобщённый алгоритм её работы и классификация основных типов СТЗ. С развитием аппаратных средств и доступности библиотек для разработки СТЗ появилось множество работ о применении СТЗ в каких-то промышленных задачах, например, работы Ц. Хуанга, Ж. Хаты, А. Домеля и других. К сожалению, подавляющее большинство работ имеет прикладной характер и нацелены на решение какой-либо узкоспециализированной задачи, не ставя своей целью создания концепции универсальной СТЗ для использования в широком круге производственных задач.
+
+В качестве основы для разработки методик работы СТЗ используется трёхкоординатная платформа с ЧПУ, которая относится к классу модульного оборудования. Она предназначена для обработки широкой номенклатуры изделий через возможность быстрой смены инструмента и предназначена для небольших производств, которые занимаются производством малых партий изделий. Она представляет собой шасси, оснащённое шаговыми двигателями и имеющее рабочее пространство 500 на 500 мм. Каретка, проводящаяся в движение шаговыми двигателями, является основой для закрепления модулей, крепёж осуществляется электромагнитами. Для взаимосвязи модулей используется ЛВС платформы, которая содержит регистры с данными о модулях.
+
+\textbf{Вторая глава} содержит понятие о производительности оборудования, методах его расчёта и о влияющих на него факторах, а также описывает пути его повышения с внедрением систем технического зрения на отдельные участки производственных линий.
+
+очевидно, что зачастую на производствах станки с ЧПУ используются неэффективно. Ввиду повышения требований к качеству имеется спрос на высокоточное оборудование, однако, и время на обработку такого изделия соответственно повысится. И, если крупные производства могут себе позволить выбирать, вкладываться ли им в дорогостоящее широкофункциональное оборудование или же строить производственные линии на основе узкоспециализированных станков. Малые производства такой возможности лишены, им проще приобрести более универсальное оборудование, которое будет выполнять все виды обрабатывающих операций.
+
+В условиях постоянно меняющегося производства эффективность и производительность оборудования оценить довольно сложно и обычно малые предприятия не ведут пообных расчётов, поскольку подготовка производства у них занимает больше времени, чем само производство. Под производительность станка обычно понимается <<штучная производительность>> --- количество произведённых изделий за единицу времени. Показатель производительности оборудования относится больше к экономическому типу параметров и на крупных предприятиях от его правильного расчёта зависит окупаемость производства. Производительность напрямую относится к показателю эффективности оборудования, которая в литературе носит аббревиатуру OEE (Overall Equipment Effectiveness)\footnote{пер. с англ. --- ``Общая эффективность оборудования''}. Разумеется, производительность не является постоянной величиной и изменяется со временем. Этому способствуют как систематические факторы, такие как износ оборудования, инфляция, плановые ремонты, уровень организации рабочего места, так и стохастические: человеческий фактор, логистика, колебания рынка.
+
+Для получения оценки производительности оборудования следует рассмотреть его работу в динамике, например, в течение 2 месяцев. В этом случае будут понятны степени влияния факторов изменения производительности оборудования. Но для получения гипотетической оценки можно ограничиться анализом типового технологического процесса. В качестве такового был выбрал процесс производства партии переходных печатных плат типа SOP14/SSOP14 с разводкой под корпус DIP-14.
+
+Техпроцесс предполагает создание партии плат в 729 штук, каждая из которых имеет размеры 18 мм на 18 мм. Каждая плата имеет 14 проводящих отверстий диаметром 0,8 мм и два крепёжных диаметром 2 мм, а также разводку на обеих сторонах платы. Рассматриваемый технологический процесс изготовления партии печатных плат насчитывает 100 операций, из них 37 установочных, 33 вспомогательных, 18 обрабатывающих и 12 контролирующих. Итоговое нормативное время изготовления партии из 729 печатных плат составляет 105450 секунд или приблизительно 29,2 часа. Таким образом, можно утверждать, что при текущем технологическом процессе установка способна выдавать 24,9 печатных плат в час.
+
+Если подсчитать время работы установки, то есть, суммарное время обрабатывающих операций, то оно составит 81620 секунд или 22,6 часа. По отношению к общему времени это составляет 77,6 \%. Нетрудно заметить, что основная доля неучтённого времени приходится на промежуточные операции контроля изделий после каждого этапа обработки. Это расчёт так называемого идеального процесса производства, без учёта влияния факторов, описанных выше.
+
+Очевидно, что основная доля простоя оборудования приходится на операции контроля, которые необходимо выполнять после каждого этапа производства. Тем не менее, можно рассмотреть такие способы снижения времени производства, как объединение операций, смещение операций внутри техпроцесса, а также одновременное выполнение двух операций за счёт установки двух инструментальных модулей на каретку, но все они являются ситуативными и не будут работать на большинстве техпроцессов. Поэтому было решено рассмотреть методики снижения времени производства за счёт внедрения системы технического зрения.
 
 \textbf{Третья глава} описывает теоретические основы построения систем машинного зрения, в том числе используемые в работе методы распознавания образов и обработки изображений.
+
+Задача построения СТЗ даже под конкретную узкоспециализированную функцию всегда является комплексной и требует своего подхода. При разработке важно не только обеспечить нужный результат работы системы, но и обеспечить ее масштабируемость и технологичность. Под масштабируемостью здесь понимается готовность системы к расширению функционала в изменившихся условиях работы, а под технологичностью --- простую и понятную взаимосвязь структурных компонентов системы, а также минимальные затраты на её интеграцию и наладку. Проектирование любой СТЗ начинается с постановки задачи, определения условий работы, а также составления библиотеки распознаваемых объектов, так называемого <<датасета>>. Датасет важен в первую очередь для составления списка признаков искомого объекта и выявления общности этих признаков.
+
+Существует ряд методов поиска объекта на изображениях:
+
+\begin{enumerate}
+	\item Метод сопоставления с шаблоном (перебора).
+	\item Анализ параметров объекта.
+	\item Нейросетевой подход.
+\end{enumerate}
+
+Последний подход является широко распространённым для создания детектирующих СТЗ в настоящее время, однако, в условиях постоянной смены изделий его применение не является целесообразным по причине того, что обучение нейросети займёт большое количество времени и будет проводиться постоянно по мере появления новых объектов для обнаружения.
 
 \textbf{Четвертая глава} посвящена анализу полученных результатов работы, включая оценочные характеристики получаемых значений, а также дальнейшим перспективам разрабатываемого направления.
