--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,40 +1,26 @@
 
-{\actuality} За долгие годы развития промышленного производства было создано множество способов автоматизации производственного процесса. Техническое или машинное зрение уже долгое время успешно применяется в широком спектре отраслей, среди которых существенную долю практического применения занимают задачи промышленного производства. С развитием информационных технологий существует необходимость делегирования от человека к техническим средствам и алгоритмам выполнение разного рода операций, требующих непрерывного контроля и высокой точности. Системы технического зрения или машинное зрение в общем виде --- это комплекс технических и программных средств, созданный с целью интерпретирования, классификации и определения объектов реального мира и использование этого знания для решения конкретной задачи. К этому же определению можно отнести совокупность методических средств и теоретических документов, описывающих данное направление с точки зрения функционирования и применяемости. Основным вектором применения машинного зрения можно назвать такие отрасли, как робототехника и производство, хотя схожие технологии можно встретить и в повседневной жизни, например, при сканировании штрих-кода в супермаркете или так называемые QR-коды. Суть работы такого оборудования в большинстве случаев неизменна – существует реальный объект, из которого путем визуального анализа необходимо получить некую информацию и соответствующим образом ее обработать. К примеру, в штрих-коде такой информацией будет страна и код изготовителя товара, в QR-коде содержится ссылка на какую-либо страницу в Интернете или же простое текстовое сообщение.
+{\actuality} За долгие годы развития промышленного производства было создано множество способов автоматизации производственного процесса. Техническое или машинное зрение уже долгое время успешно применяется в широком спектре отраслей, среди которых существенную долю практического применения занимают задачи промышленного производства. С развитием информационных технологий существует необходимость делегирования от человека к техническим средствам и алгоритмам выполнение разного рода операций, требующих непрерывного контроля и высокой точности. Системы технического зрения или машинное зрение в общем виде --- это комплекс технических и программных средств, созданный с целью интерпретирования, классификации и определения объектов реального мира и использование этого знания для решения конкретной задачи. К этому же определению можно отнести совокупность методических средств и теоретических документов, описывающих данное направление с точки зрения функционирования и применяемости. Основным вектором применения машинного зрения можно назвать такие отрасли, как робототехника и производство, хотя схожие технологии можно встретить и в повседневной жизни, например, при сканировании штрих-кода в супермаркете или так называемые QR-коды \cite{Hung2020}. Суть работы такого оборудования в большинстве случаев неизменна: существует реальный объект, из которого путем визуального анализа необходимо получить некую информацию и соответствующим образом ее обработать. К примеру, в штрих-коде такой информацией будет страна и код изготовителя товара, в QR-коде будет содержаться ссылка на какую-либо страницу в Интернете или же простое текстовое сообщение.
 
-В последнее время с развитием концепции Индустрии 4.0 отмечается рост использования вычислительных технологий в производственных процессах. Все большую популярность обретают небольшие производства, выпускающие единичные или малые партии продукции и способные быстро переориентировать производство под нужды заказчиков. В связи с этим появилась концепция модульных систем управления оборудованием с ЧПУ, более подходящая для нужд производителей. Модульный подход обеспечивает три важные характеристики оборудования: масштабируемость, гибкость и автономность. В соответствии с вышесказанным, машинное зрение также может существовать в систему управления в виде отдельного модуля, расширяемого или упрощаемого в соответствии с типом выполняемой задачи.
+В последнее время с развитием концепции Индустрии 4.0 \cite{Hermann2015, Moore2019, Schwab2017} отмечается рост использования вычислительных технологий в производственных процессах. Все большую популярность обретают небольшие производства, выпускающие единичные или малые партии продукции и способные быстро переориентировать производство под нужды заказчиков. В связи с этим появилась концепция модульных систем управления оборудованием с ЧПУ, более подходящая для нужд производителей \cite{Utin, Morales2010}. Модульный подход обеспечивает три важные характеристики оборудования: масштабируемость, гибкость и автономность. В соответствии с вышесказанным, машинное зрение также может существовать в систему управления в виде отдельного модуля, расширяемого или упрощаемого в соответствии с типом выполняемой задачи.
 
-Как показывает практика, применение систем машинного зрения в промышленности позволяет существенно повысить эффективность производственных линий, повысить качество выпускаемой продукции, удешевить конечный продукт за счёт высвобождения людских ресурсов, а также выполнять мониторинг процесса, сигнализируя о внештатных или аварийных ситуациях. Кроме того, методами визуального анализа можно проводить первичный контроль готовой продукции, к примеру, определять чистоту поверхности по блику света на ней. Но, разумеется, в этом случае всё упирается в качество используемых технических средств и условия работы системы.
+Как показывает практика, применение систем машинного зрения в промышленности позволяет существенно повысить эффективность производственных линий, повысить качество выпускаемой продукции, удешевить конечный продукт за счёт высвобождения людских ресурсов, а также выполнять мониторинг процесса, сигнализируя о внештатных или аварийных ситуациях. Кроме того, методами визуального анализа можно проводить первичный контроль готовой продукции, к примеру, определять чистоту поверхности по блику света на ней \cite{Allan2019}. Но, разумеется, в этом случае всё упирается в качество используемых технических средств и условия работы системы.
 
-Программная часть системы машинного зрения является совокупностью методов обработки изображений и методов распознавания образов, поскольку в ходе распознавательного процесса необходимо не только «увидеть» объект, но и соответствующим образом классифицировать его. Задача классификации строится из возможности системы выделять признаки анализируемого объекта и отнесения его к какому-либо классу или подклассу. Чаще всего системы распознавания образов проектируются с вводом некоторого количества образов, классификация которых уже известна, таким образом системе проще распознавать объекты, сравнивая их с так называемым эталоном. В общем виде это выглядит так: система принимает на вход объект, проводит анализ и выделяет характеристики, сравнивая их с тем, что было заложено в её базу знаний на этапах разработки, после чего, на основе полученных характеристик, запускается механизм присваивания объекта одному или нескольким классам, что является результатом, впоследствии используемым для решения других задач. Каждый этап работы системы должен содержать механизм обратной связи, чтобы база знаний могла дополняться и улучшаться.
+Программная часть системы машинного зрения является совокупностью методов обработки изображений и методов распознавания образов, поскольку в ходе распознавательного процесса необходимо не только «увидеть» объект, но и соответствующим образом классифицировать его. Задача классификации строится из возможности системы выделять признаки анализируемого объекта и отнесения его к какому-либо классу или подклассу. Чаще всего системы распознавания образов проектируются с вводом некоторого количества образов, классификация которых уже известна, таким образом системе проще распознавать объекты, сравнивая их с так называемым эталоном \cite{Kudr-92, Mest2004}. В общем виде это выглядит так: система принимает на вход объект, проводит анализ и выделяет характеристики, сравнивая их с тем, что было заложено в её базу знаний на этапах разработки, после чего, на основе полученных характеристик, запускается механизм присваивания объекта одному или нескольким классам, что является результатом, впоследствии используемым для решения других задач. Каждый этап работы системы должен содержать механизм обратной связи, чтобы база знаний могла дополняться и улучшаться. 
 
-\textbf{Степень разработанности темы.} Разработками в области машинного зрения занимаются многие специалисты из разных научных и исследовательских центров в разных странах. Работы в области промышленного производства составляют лишь малую часть разработок, но всё же она весьма обширна, что подчёркивает актуальность выбранной тематики. К примеру, исследовательская команда из Орхусского университета разрабатывают систему ЧПУ для лазерного резака на основе комбинирования маркеров и дополненной реальности. Система основана на подходе <<What You See Is What You Get>>, где проектор используется для отображения текущих контуров, а маркеры используются для установки его положения в рабочей области. Наряду с этим, специалисты университета Кейо расширяют функциональность фидуциальных  маркеров для лазерного резака. Чтобы установить параметры резки, они размещают набор маркеров опорных точек рядом с заготовкой, в том числе метки, связанные с материалом, порядком операций и командами. В работе описан способ обнаружения ошибок контура на основе машинного зрения. Разработан специальный измерительный прибор с нанесёнными на него маркерами, который позволяет исследователям измерять погрешность контура без сетчатого датчика.
+\textbf{Степень разработанности темы.} Разработками в области технического зрения занимаются многие специалисты из разных научных и исследовательских центров в разных странах. Работы в области промышленного производства составляют лишь малую часть разработок, но всё же она весьма обширна, что подчёркивает актуальность выбранной тематики. Это связано, в первую очередь, с появлением на рынке дешёвых и качественных комплектующих, к примеру, высокопроизводительные одноплатные компьютеры Odroid, Raspberry и Arduino, позволяющие реализовывать обрабатывающие алгоритмы. Также причиной служит переориентация промышленности на гибкие и масштабируемые системы управления оборудованием.
+
+К примеру, исследовательская команда из Орхусского университета разрабатывают систему ЧПУ для лазерного резака на основе комбинирования маркеров и дополненной реальности \cite{6935435}. Система основана на подходе <<What You See Is What You Get\footnote{Что видите, то и получаете (пер. с англ.) --- концепция построения программного обеспечения, в которой заранее визуализируется то, что получит пользователь на выходе, а редактирование происходит в реальном времени.}>>, где проектор используется для отображения текущих контуров, а маркеры используются для установки его положения в рабочей области. Наряду с этим, специалисты университета Кейо расширяют функциональность фидуциальных  маркеров для лазерного резака \cite{071ddc0cfd994362b7c96f0ecbc300f3}. Чтобы установить параметры резки, они размещают набор маркеров опорных точек рядом с заготовкой, в том числе метки, связанные с материалом, порядком операций и командами. В работе описан способ обнаружения ошибок контура на основе машинного зрения. Разработан специальный измерительный прибор с нанесёнными на него маркерами, который позволяет исследователям измерять погрешность контура без сетчатого датчика. Задача анализа емкостей с жидкостями для поиска примесей с применением машинного обучения описывается в работе \textit{Ли Синью} и коллектива из тайваньского университета \cite{Li2018}.
+
+Что касается применения машинного рения в промышленности, то на эту тему также публикуется большое число статей и книг. К примеру, книга
+<<Manufacturing, Engineering \& Technology>> \textit{С. Калпакяна} посвящена вопросам «умного» производства с применением вычислительных технологий, в том числе, СТЗ \cite{Kalpakjian}. Группа исследователей под руководством \textit{Р. Усаментьяги} в своей статье приводят описание методик калибрования камеры для минимизации ошибок измерений, также описывается процесс производства калибровочных шаблонов \cite{Usamentiaga2017}. Немалое внимание также уделяется проблеме контроля изделий или операций в промышленности. Статья \textit{Оберга и Силкстрёма} описывает применение систем машинного зрения для контроля качества сварных швов с использование инфракрасных камер \cite{Oberg2017}. Ещё одна группа исследователей из Китая также представляют методику анализа поршня для двигателя внутреннего сгорания, с определением мелких дефектов. В частности, здесь качество поверхности анализируется по блику света на ней \cite{Xu2017}.
+
+Разумеется, во введении сложно отразить то множество работ, которое посвящено тематике применения СТЗ в промышленности. Данному вопросу будет посвящён раздел \cite{sect1_3} настоящей диссертации, где будут отражены работы с 80-х годов прошлого века до наших дней. 
 
 \textbf{Объектом исследования} является многоцелевое модульное технологическое оборудование с числовым программным управлением.
 
 \textbf{Субъектом исследования} является система машинного зрения как совокупность технических и программных средств, направленных на обеспечение функциональности модульного оборудования в рамках решения задач, связанных с производственными процессами.
 
 \textbf{Целью} работы является разработка модуля машинного зрения и его внедрение в систему управления модульной трёхкоординатной платформы.
-
-\ifsynopsis
-Этот абзац появляется только в~автореферате.
-Для формирования блоков, которые будут обрабатываться только в~автореферате,
-заведена проверка условия \verb!\!\verb!ifsynopsis!.
-Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
-автореферата).
-\else
-Этот абзац появляется только в~диссертации.
-Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
-документа (\verb!dissertation.tex! для диссертации), можно сделать новую
-команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
-\fi
-
-% {\progress}
-% Этот раздел должен быть отдельным структурным элементом по
-% ГОСТ, но он, как правило, включается в описание актуальности
-% темы. Нужен он отдельным структурынм элемементом или нет ---
-% смотрите другие диссертации вашего совета, скорее всего не нужен.
-
-{\aim} данной работы является \ldots
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
@@ -54,142 +40,9 @@
 
 \textbf{Методы исследования.} Для решения обозначенных научных и инженерных задач использовались следующие научные положения: методики обработки изображений, методы распознавания образов, оптика и оптические системы, процедурное и объектно-ориентированное программирование, технологии построения локаьных вычислительных сетей.
 
-{\novelty}
-\begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Впервые \ldots
-  \item Впервые \ldots
-  \item Было выполнено оригинальное исследование \ldots
-\end{enumerate}
-
-{\influence} \ldots
-
-{\methods} \ldots
-
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
  \item Методики выполнения основных функций машинного зрения с достигаемыми точностными характеристиками.
  \item Структурная схема компонентов компонента машинного зрения, отражающая взаимодействие компонентов друг с другом, а также с внешней средой модульного оборудования..
  \item Анализ результатов, достигаемых разрабатываемыми алгоритмами.
 \end{enumerate}
-
-{\probation}
-Основные результаты работы докладывались~на:
-перечисление основных конференций, симпозиумов и~т.\:п.
-
-{\contribution} Автор принимал активное участие \ldots
-
-\ifnumequal{\value{bibliosel}}{0}
-{%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
-    {\publications} Основные результаты по теме диссертации изложены
-    в~XX~печатных изданиях,
-    X из которых изданы в журналах, рекомендованных ВАК,
-    X "--- в тезисах докладов.
-}%
-{%%% Реализация пакетом biblatex через движок biber
-    \begin{refsection}[bl-author, bl-registered]
-        % Это refsection=1.
-        % Процитированные здесь работы:
-        %  * подсчитываются, для автоматического составления фразы "Основные результаты ..."
-        %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthor` или `\insertbiblioauthorgrouped`
-        %  * нумеруются там в зависимости от порядка команд `\printbibliography` в этом разделе.
-        %  * при использовании `\insertbiblioauthorgrouped`, порядок команд `\printbibliography` в нём должен быть тем же (см. biblio/biblatex.tex)
-        %
-        % Невидимый библиографический список для подсчёта количества публикаций:
-        \printbibliography[heading=nobibheading, section=1, env=countauthorvak,          keyword=biblioauthorvak]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorwos,          keyword=biblioauthorwos]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorscopus,       keyword=biblioauthorscopus]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorconf,         keyword=biblioauthorconf]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorother,        keyword=biblioauthorother]%
-        \printbibliography[heading=nobibheading, section=1, env=countregistered,         keyword=biblioregistered]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorpatent,       keyword=biblioauthorpatent]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorprogram,      keyword=biblioauthorprogram]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthor,             keyword=biblioauthor]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorvakscopuswos, filter=vakscopuswos]%
-        \printbibliography[heading=nobibheading, section=1, env=countauthorscopuswos,    filter=scopuswos]%
-        %
-        \nocite{*}%
-        %
-        {\publications} Основные результаты по теме диссертации изложены в~\arabic{citeauthor}~печатных изданиях,
-        \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК\sloppy%
-        \ifnum \value{citeauthorscopuswos}>0%
-            , \arabic{citeauthorscopuswos} "--- в~периодических научных журналах, индексируемых Web of~Science и Scopus\sloppy%
-        \fi%
-        \ifnum \value{citeauthorconf}>0%
-            , \arabic{citeauthorconf} "--- в~тезисах докладов.
-        \else%
-            .
-        \fi%
-        \ifnum \value{citeregistered}=1%
-            \ifnum \value{citeauthorpatent}=1%
-                Зарегистрирован \arabic{citeauthorpatent} патент.
-            \fi%
-            \ifnum \value{citeauthorprogram}=1%
-                Зарегистрирована \arabic{citeauthorprogram} программа для ЭВМ.
-            \fi%
-        \fi%
-        \ifnum \value{citeregistered}>1%
-            Зарегистрированы\ %
-            \ifnum \value{citeauthorpatent}>0%
-            \formbytotal{citeauthorpatent}{патент}{}{а}{}\sloppy%
-            \ifnum \value{citeauthorprogram}=0 . \else \ и~\fi%
-            \fi%
-            \ifnum \value{citeauthorprogram}>0%
-            \formbytotal{citeauthorprogram}{программ}{а}{ы}{} для ЭВМ.
-            \fi%
-        \fi%
-        % К публикациям, в которых излагаются основные научные результаты диссертации на соискание учёной
-        % степени, в рецензируемых изданиях приравниваются патенты на изобретения, патенты (свидетельства) на
-        % полезную модель, патенты на промышленный образец, патенты на селекционные достижения, свидетельства
-        % на программу для электронных вычислительных машин, базу данных, топологию интегральных микросхем,
-        % зарегистрированные в установленном порядке.(в ред. Постановления Правительства РФ от 21.04.2016 N 335)
-    \end{refsection}%
-    \begin{refsection}[bl-author, bl-registered]
-        % Это refsection=2.
-        % Процитированные здесь работы:
-        %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthorimportant`.
-        %  * ни на что не влияют в противном случае
-        \nocite{vakbib2}%vak
-        \nocite{patbib1}%patent
-        \nocite{progbib1}%program
-        \nocite{bib1}%other
-        \nocite{confbib1}%conf
-    \end{refsection}%
-        %
-        % Всё, что вне этих двух refsection, это refsection=0,
-        %  * для диссертации - это нормальные ссылки, попадающие в обычную библиографию
-        %  * для автореферата:
-        %     * при usefootcite==0, ссылка корректно сработает только для источника из `external.bib`. Для своих работ --- напечатает "[0]" (и даже Warning не вылезет).
-        %     * при usefootcite==1, ссылка сработает нормально. В авторской библиографии будут только процитированные в refsection=0 работы.
-}
-
-При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
-в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
-системах цитирования требуется использовать поля:
-\begin{itemize}
-        \item \texttt{authorvak} если публикация индексирована ВАК,
-        \item \texttt{authorscopus} если публикация индексирована Scopus,
-        \item \texttt{authorwos} если публикация индексирована Web of Science,
-        \item \texttt{authorconf} для докладов конференций,
-        \item \texttt{authorpatent} для патентов,
-        \item \texttt{authorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{authorother} для других публикаций.
-\end{itemize}
-Для подсчёта используются счётчики:
-\begin{itemize}
-        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
-        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
-        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
-        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
-        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
-        \item \texttt{citeauthorconf} для докладов на конференциях,
-        \item \texttt{citeauthorother} для остальных работ,
-        \item \texttt{citeauthorpatent} для патентов,
-        \item \texttt{citeauthorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{citeauthor} для суммарного количества работ.
-\end{itemize}
-% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций;
-% \texttt{citeregistered} "--- для подсчёта суммарного количества патентов и программ для ЭВМ.
-
-Для добавления в список публикаций автора работ, которые не были процитированы в
-автореферате, требуется их~перечислить с использованием команды \verb!\nocite! в
-\verb!Synopsis/content.tex!.
